@@ -1,3 +1,9 @@
+2011-08-01  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclProc.c (TclProcCompileProc): fix for leak of
+	resolveInfo when recompiling procs, [Bug 3383616]. Thx go to
+	Gustaf Neumann for detecting the bug and providing the fix.
+
 2011-08-01  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/tclvars.n (EXAMPLES): Added some examples of how some of the
